# butt

./: +ç+  .gitignore  AUTHORS  INSTALL  KNOWN_BUGS  Makefile  Makefile.am  Makefile.in  README  README.md  THANKS  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
icons/: butt.desktop  butt.icns
po/: Makefile  butt.pot  ca.mo  ca.po  config.h  config.status  en.mo  en.po  es.mo  es.po
po/Locale/ca/LC_MESSAGES/: butt.mo
po/Locale/en/LC_MESSAGES/: butt.mo
po/Locale/es/LC_MESSAGES/: butt.mo
po/locale/ca/LC_MESSAGES/: butt.mo  butt.po
po/locale/es/LC_MESSAGES/: butt.mo  butt.po
po/src/: Makefile  butt
po/src/.deps/: butt.Po  cfg.Po  flac_encode.Po  icecast.Po  lame_encode.Po  opus_encode.Po  parseconfig.Po  port_audio.Po  ringbuffer.Po  shoutcast.Po  sockfuncs.Po  strfuncs.Po  timer.Po  util.Po  vorbis_encode.Po  vu_meter.Po  wav_header.Po
po/src/FLTK/.deps/: Fl_ILM216.Po  Fl_My_Native_File_Chooser.Po  fl_callbacks.Po  fl_funcs.Po  fl_timer_funcs.Po  flgui.Po
src/: Biquad.cpp  Biquad.h  CurrentTrackOSX.h  CurrentTrackOSX.m  DynamicLibraryLoad.hpp  Makefile  Makefile.am  Makefile.in  aac_encode.cpp  aac_encode.h  aacplus_encode.cpp  aacplus_encode.h  butt  butt.cpp  butt.h  butt.manifest  cfg.cpp  cfg.h  currentTrack.cpp  currentTrack.h  currentTrackLinux.cpp  dsp.cpp  dsp.hpp  flac_encode.cpp  flac_encode.h  icecast.cpp  icecast.h  lame_encode.cpp  lame_encode.h  opus_encode.cpp  opus_encode.h  parseconfig.cpp  parseconfig.h  port_audio.cpp  port_audio.h  resource.rc  ringbuffer.cpp  ringbuffer.h  shoutcast.cpp  shoutcast.h  (+11 more)
src/.deps/: Biquad.Po  aac_encode.Po  butt.Po  cfg.Po  currentTrackLinux.Po  dsp.Po  flac_encode.Po  icecast.Po  lame_encode.Po  opus_encode.Po  parseconfig.Po  port_audio.Po  ringbuffer.Po  shoutcast.Po  sockfuncs.Po  strfuncs.Po  timer.Po  util.Po  vorbis_encode.Po  vu_meter.Po  wav_header.Po
src/FLTK/: Fl_ILM216.cpp  Fl_ILM216.h  Fl_My_Native_File_Chooser.cxx  Fl_My_Native_File_Chooser_FLTK.cxx  Fl_My_Native_File_Chooser_GTK.cxx  Fl_My_Native_File_Chooser_MAC.mm  Fl_My_Native_File_Chooser_WIN32.cxx  Fl_My_Native_File_Chooser_common.cxx  fl_callbacks.cpp  fl_callbacks.h  fl_funcs.cpp  fl_funcs.h  fl_timer_funcs.cpp  fl_timer_funcs.h  flgui.cpp  flgui.fl  flgui.h
src/FLTK/.deps/: Fl_ILM216.Po  Fl_My_Native_File_Chooser.Po  fl_callbacks.Po  fl_funcs.Po  fl_timer_funcs.Po  flgui.Po
src/FLTK/FL/: Fl_My_Double_Window.H  Fl_My_Native_File_Chooser.H  Fl_My_Value_Slider.H
src/xpm/: conn.xpm  conn_dark.xpm  rec.xpm  rec_armed.xpm  rec_dark.xpm
usr/share/applications/: butt.desktop
usr/share/doc/butt/: NEWS  THANKS
usr/share/pixmaps/: butt16.xpm  butt32.xpm
xcode/BUTT/: Info.plist
xcode/butt.xcodeproj/: project.pbxproj
xcode/butt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/butt.xcodeproj/project.xcworkspace/xcshareddata/: butt.xccheckout
xcode/butt.xcodeproj/project.xcworkspace/xcuserdata/melchor9000.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/butt.xcodeproj/xcuserdata/bip.xcuserdatad/xcschemes/: butt.xcscheme
xcode/butt.xcodeproj/xcuserdata/melchor9000.xcuserdatad/xcschemes/: butt.xcscheme  xcschememanagement.plist
xcode/include/: config.h  iTunes.h
