AUTOMAKE_OPTIONS = foreign
SUBDIRS = src 
EXTRA_DIST = src/xpm config.h src/butt.manifest xcode player_plugins icons usr ChangeLog \
	     AUTHORS THANKS KNOWN_BUGS INSTALL README COPYING NEWS src/FLTK/flgui.fl \
	     src/FLTK/Fl_My_Native_File_Chooser_MAC.mm src/FLTK/Fl_My_Native_File_Chooser_WIN32.cxx \
	     src/FLTK/Fl_My_Native_File_Chooser_FLTK.cxx src/FLTK/Fl_My_Native_File_Chooser_common.cxx \
	     src/FLTK/Fl_My_Native_File_Chooser_GTK.cxx

